Added MbcAsmCompiler class
I wrote this in another project and copied it to here. It feels pretty cobbled-together, but I've done some testing and I think I ironed out most of the bugs. I'm sure some are still in there, but in the end it's just a tool to write bytecode easier.

--- a/MegaManLofi/MegaManLofi.vcxproj
+++ b/MegaManLofi/MegaManLofi.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="GameOverStateConsoleRenderer.cpp" />
     <ClCompile Include="GameOverStateInputHandler.cpp" />
     <ClCompile Include="KeyboardInputDefsGenerator.cpp" />
+    <ClCompile Include="MbcAsmCompiler.cpp" />
     <ClCompile Include="MbcVirtualMachine.cpp" />
     <ClCompile Include="MegaManLofi.cpp" />
     <ClCompile Include="DiagnosticsConsoleRenderer.cpp" />
@@ -293,6 +294,8 @@
     <ClInclude Include="KeyboardInputReader.h" />
     <ClInclude Include="KeyCode.h" />
     <ClInclude Include="MathOp.h" />
+    <ClInclude Include="MbcAsmCollections.h" />
+    <ClInclude Include="MbcAsmCompiler.h" />
     <ClInclude Include="MbcAsmDefines.h" />
     <ClInclude Include="MbcDefines.h" />
     <ClInclude Include="MbcVirtualMachine.h" />
