Added stationary turret enemy
This also sets up #defines for all the different entity meta IDs. Eventually we'll want tools to build all this stuff, but for now it's easier to keep track of everything this way.

--- a/MegaManLofi/MegaManLofi.vcxproj
+++ b/MegaManLofi/MegaManLofi.vcxproj
@@ -256,6 +256,7 @@
     <ClInclude Include="GameClock.h" />
     <ClInclude Include="GameCommand.h" />
     <ClInclude Include="GameCommandArgs.h" />
+    <ClInclude Include="GameDefGeneratorDefines.h" />
     <ClInclude Include="GameDefs.h" />
     <ClInclude Include="GameDefsGenerator.h" />
     <ClInclude Include="GameOverStateConsoleRenderer.h" />
