--- a/MegaManLofi/MegaManLofi.vcxproj.filters
+++ b/MegaManLofi/MegaManLofi.vcxproj.filters
@@ -680,12 +680,18 @@
     <ClInclude Include="ShootCommandArgs.h">
       <Filter>Header Files\CommandArgs</Filter>
     </ClInclude>
+    <ClInclude Include="ShootTargetCommandArgs.h">
+      <Filter>Header Files\CommandArgs</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="BehaviorASM\201.mbcasm">
       <Filter>Header Files\GameDefGenerators\BehaviorASM</Filter>
     </None>
     <None Include="BehaviorASM\202.mbcasm">
+      <Filter>Header Files\GameDefGenerators\BehaviorASM</Filter>
+    </None>
+    <None Include="BehaviorASM\203.mbcasm">
       <Filter>Header Files\GameDefGenerators\BehaviorASM</Filter>
     </None>
   </ItemGroup>
