Add simple walk-left behavior to bad dude

--- a/MegaManLofi/MegaManLofi.vcxproj
+++ b/MegaManLofi/MegaManLofi.vcxproj
@@ -356,6 +356,7 @@
     </None>
     <None Include="BehaviorASM\202.mbcasm" />
     <None Include="BehaviorASM\203.mbcasm" />
+    <None Include="BehaviorASM\204.mbcasm" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
